--- a/package.json
+++ b/package.json
@@ -4,36 +4,35 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node --harmony_destructuring --use_strict app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "co-busboy": "1.3.1",
+    "co-cache": "2.2.0",
+    "co-ejs": "1.5.2",
+    "co-fs": "1.2.0",
+    "config-lite": "1.3.0",
+    "file-type": "3.8.0 ",
     "koa": "1.2.0",
-    "koa-validate": "1.0.6",
+    "koa-body": "1.4.0",
+    "koa-compress": "1.0.9",
+    "koa-errorhandler": "0.1.1",
+    "koa-flash": "1.0.0",
+    "koa-generic-session": "1.10.2",
+    "koa-generic-session-mongo": "0.2.5",
+    "koa-logger": "1.3.0",
     "koa-router": "5.4.0",
     "koa-router-cache": "1.3.1",
     "koa-static": "2.0.0",
     "koa-static-cache": "3.1.7",
-    "koa-generic-session": "1.10.2",
-    "koa-generic-session-mongo": "0.2.5",
-    "koa-body": "1.4.0",
-    "koa-compress": "1.0.9",
-    "koa-flash": "1.0.0",
-    "koa-logger": "1.3.0",
-    "koa-errorhandler": "0.1.1",
-    "config-lite": "1.3.0",
-    "co-cache": "2.2.0",
-    "co-ejs": "1.5.2",
-    "co-fs": "1.2.0",
-    "file-type": "3.8.0 ",
-    "co-busboy": "1.3.1",
-    "validator": "5.3.0",
+    "koa-validate": "1.0.6",
+    "mathjs": "^3.5.3",
     "mongoose": "4.4.20",
+    "node-dir": "0.1.15",
     "require-all": "2.0.0",
-    "node-dir": "0.1.15"
-  },
-  "scripts": {
-    "start": "node --harmony_destructuring --use_strict app.js"
+    "validator": "5.3.0",
+    "comment-koa-router": "1.0.0"
   }
 }
