--- a/package.json
+++ b/package.json
@@ -13,26 +13,25 @@
     "co-cache": "2.2.0",
     "co-ejs": "1.5.2",
     "co-fs": "1.2.0",
+    "comment-koa-router": "^0.1.4",
     "config-lite": "1.3.0",
     "file-type": "3.8.0 ",
     "koa": "1.2.0",
     "koa-body": "1.4.0",
     "koa-compress": "1.0.9",
     "koa-errorhandler": "0.1.1",
-    "koa-flash": "1.0.0",
-    "koa-generic-session": "1.10.2",
-    "koa-generic-session-mongo": "0.2.5",
     "koa-logger": "1.3.0",
     "koa-router": "5.4.0",
     "koa-router-cache": "1.3.1",
     "koa-static": "2.0.0",
     "koa-static-cache": "3.1.7",
     "koa-validate": "1.0.6",
-    "mathjs": "^3.5.3",
     "mongoose": "4.4.20",
     "node-dir": "0.1.15",
     "require-all": "2.0.0",
-    "validator": "5.3.0",
-    "comment-koa-router": "1.0.0"
+    "validator": "5.3.0"
   }
 }
+
+//"koa-generic-session": "1.10.2",
+//"koa-generic-session-mongo": "0.2.5",
