--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node --harmony_destructuring --use_strict app.js"
+    "start": "node --use_strict app.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,11 +13,11 @@
     "co-cache": "2.2.0",
     "co-ejs": "1.5.2",
     "co-fs": "1.2.0",
-    "comment-koa-router": "^0.1.4",
+    "comment-koa-router": "^0.2.0",
     "config-lite": "1.3.0",
     "file-type": "3.8.0 ",
     "koa": "1.2.0",
-    "koa-body": "1.4.0",
+    "koa-bodyparser": "2.2.0",
     "koa-compress": "1.0.9",
     "koa-errorhandler": "0.1.1",
     "koa-logger": "1.3.0",
@@ -25,13 +25,11 @@
     "koa-router-cache": "1.3.1",
     "koa-static": "2.0.0",
     "koa-static-cache": "3.1.7",
-    "koa-validate": "1.0.6",
+    "validator": "6.1.0",
     "mongoose": "4.4.20",
     "node-dir": "0.1.15",
     "require-all": "2.0.0",
-    "validator": "5.3.0"
+    "validator": "5.3.0",
+    "moment": "2.15.2"
   }
 }
-
-//"koa-generic-session": "1.10.2",
-//"koa-generic-session-mongo": "0.2.5",
