--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "co-cache": "2.2.0",
     "co-ejs": "1.5.2",
     "co-fs": "1.2.0",
-    "comment-koa-router": "^0.2.0",
+    "comment-koa-router": "0.2.2",
     "config-lite": "1.3.0",
     "file-type": "3.8.0 ",
     "koa": "1.2.0",
