--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "beinthatday",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "app.js",
   "scripts": {
@@ -13,8 +13,8 @@
     "co-cache": "2.2.0",
     "co-ejs": "1.5.2",
     "co-fs": "1.2.0",
-    "comment-koa-router": "0.2.2",
-    "config-lite": "1.3.0",
+    "comment-koa-router": "^0.2.6",
+    "config": "1.24.0",
     "file-type": "3.8.0 ",
     "koa": "1.2.0",
     "koa-bodyparser": "2.2.0",
@@ -25,11 +25,9 @@
     "koa-router-cache": "1.3.1",
     "koa-static": "2.0.0",
     "koa-static-cache": "3.1.7",
-    "validator": "6.1.0",
-    "mongoose": "4.4.20",
+    "moment": "2.15.2",
+    "mongoose": "4.7.1",
     "node-dir": "0.1.15",
-    "require-all": "2.0.0",
-    "validator": "5.3.0",
-    "moment": "2.15.2"
+    "validator": "5.3.0"
   }
 }
