--- a/webpacks/package.json
+++ b/webpacks/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "main": "main.js",
   "scripts": {
-    "build": "webpack --progress --hide-modules"
+    "dev": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build --config webpack.config.dev.js",
+    "build": "webpack --progress --hide-modules --config webpack.config.js"
   },
   "license": "ISC",
   "devDependencies": {
@@ -23,6 +24,11 @@
     "webpack": "^1.13.3"
   },
   "dependencies": {
+    "jquery": "^3.1.1",
+    "moment": "^2.17.1",
+    "quill": "1.0.4",
+    "semantic-ui": "^2.2.6",
+    "validator": "^5.7.0",
     "vue": "^2.1.3",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.1.1"
