new year first commit

--- a/.eslintrc
+++ b/.eslintrc
@@ -127,7 +127,7 @@
 
     // suggest using template literals instead of string concatenation
     // http://eslint.org/docs/rules/prefer-template
-    'prefer-template': 'error',
+    'prefer-template': 'warn',
 
     // disallow generator functions that do not have yield
     // http://eslint.org/docs/rules/require-yield
